Update README with new instructions and environment details

--- a/MLDT_Data.ipynb
+++ b/MLDT_Data.ipynb
@@ -2150,79 +2150,6 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-13T11:39:04.502494Z",
-     "start_time": "2025-11-13T11:39:04.479181Z"
-    }
-   },
-   "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1035    \\n---\\nfact summary\\n---\\nthe victim is a bulg...\n",
-       "1036    \\n---\\nfact summary\\n---\\nthe case involves o....\n",
-       "1037    \\n---\\nfact summary\\n---\\ng.g (the victim) and...\n",
-       "1038    \\n---\\nfact summary\\n---\\nike ekweremadu, 60, ...\n",
-       "1039    \\n---\\nfact summary\\n---\\nin november 2015 in ...\n",
-       "                              ...                        \n",
-       "9455    \\n---\\nfact summary\\n---\\nthe owners of an ita...\n",
-       "9456    \\n---\\nfact summary\\n---\\nbased on information...\n",
-       "9457    \\n---\\nfact summary\\n---\\nr.l. and v.p. were a...\n",
-       "9458    \\n---\\nfact summary\\n---\\nin may 2001, two def...\n",
-       "9459    \\n---\\nfact summary\\n---\\nthe organized crimin...\n",
-       "Name: file_content, Length: 1460, dtype: object"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 59,
-   "source": [
-    "#Check if case lowering worked\n",
-    "df_lower[\"file_content\"]"
-   ],
-   "id": "53d080438ab505b9"
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-13T12:01:40.752062Z",
-     "start_time": "2025-11-13T12:01:40.724051Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "df_lower[\"file_content\"]",
-   "id": "695e520e67775620",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1035    --fact summary --the victim is a bulgarian nat...\n",
-       "1036    --fact summary --the case involves o. l. , a m...\n",
-       "1037    --fact summary --g. g (the victim) and deanna ...\n",
-       "1038    --fact summary --ike ekweremadu, 60, a former ...\n",
-       "1039    --fact summary --in november 2015 in saudi ara...\n",
-       "                              ...                        \n",
-       "9455    --fact summary --the owners of an italian rest...\n",
-       "9456    --fact summary --based on information, a team ...\n",
-       "9457    --fact summary --r. l. and v. p. were accused ...\n",
-       "9458    --fact summary --in may 2001, two defendants (...\n",
-       "9459    --fact summary --the organized criminal group ...\n",
-       "Name: file_content, Length: 1460, dtype: object"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 66
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
      "end_time": "2025-11-13T12:54:17.866277Z",
      "start_time": "2025-11-13T12:54:17.017324Z"
     }
@@ -2847,7 +2774,11 @@
     }
    },
    "cell_type": "code",
-   "source": "from Functions import clean_text_column",
+   "source": [
+    "# Clean the text completely as much as possible\n",
+    "from Functions import clean_text_column\n",
+    "df['file_content'] = clean_text_column(df, 'file_content')"
+   ],
    "id": "f08c23fd5b607b42",
    "outputs": [],
    "execution_count": 2
@@ -2855,50 +2786,37 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-13T12:54:33.546164Z",
-     "start_time": "2025-11-13T12:54:29.078230Z"
+     "end_time": "2025-11-13T13:02:39.793876Z",
+     "start_time": "2025-11-13T13:02:38.930588Z"
     }
    },
    "cell_type": "code",
-   "source": "df['file_content'] = clean_text_column(df, 'file_content')\n",
-   "id": "2e13250a058cc373",
-   "outputs": [],
-   "execution_count": 8
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-13T12:55:37.291586Z",
-     "start_time": "2025-11-13T12:55:37.286047Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "df[\"anonymized_array_anonym_enhancement\"]",
+   "source": "df[df[\"anonymized_array_anonym_enhancement\", \"'file_content'\"]]",
    "id": "45d02d57f998c259",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1035    a bulgarian woman in her mid twenties was traf...\n",
-       "1036    a organization 1 recruited individual 1 an 18 ...\n",
-       "1037    individual 1 a 13 year old girl ran away from ...\n",
-       "1038    a nigerian senator individual 1 his wife indiv...\n",
-       "1039    a migrant domestic worker from the philippines...\n",
-       "                              ...                        \n",
-       "9455                                                  nan\n",
-       "9456                                                  nan\n",
-       "9457                                                  nan\n",
-       "9458                                                  nan\n",
-       "9459                                                  nan\n",
-       "Name: anonymized_array_anonym_enhancement, Length: 1460, dtype: object"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "('anonymized_array_anonym_enhancement', \"'file_content'\")",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mKeyError\u001B[39m                                  Traceback (most recent call last)",
+      "\u001B[36mFile \u001B[39m\u001B[32m/opt/anaconda3/envs/MLTD/lib/python3.11/site-packages/pandas/core/indexes/base.py:3812\u001B[39m, in \u001B[36mIndex.get_loc\u001B[39m\u001B[34m(self, key)\u001B[39m\n\u001B[32m   3811\u001B[39m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[32m-> \u001B[39m\u001B[32m3812\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43m_engine\u001B[49m\u001B[43m.\u001B[49m\u001B[43mget_loc\u001B[49m\u001B[43m(\u001B[49m\u001B[43mcasted_key\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m   3813\u001B[39m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m err:\n",
+      "\u001B[36mFile \u001B[39m\u001B[32mpandas/_libs/index.pyx:167\u001B[39m, in \u001B[36mpandas._libs.index.IndexEngine.get_loc\u001B[39m\u001B[34m()\u001B[39m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32mpandas/_libs/index.pyx:196\u001B[39m, in \u001B[36mpandas._libs.index.IndexEngine.get_loc\u001B[39m\u001B[34m()\u001B[39m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001B[39m, in \u001B[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001B[39m\u001B[34m()\u001B[39m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001B[39m, in \u001B[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001B[39m\u001B[34m()\u001B[39m\n",
+      "\u001B[31mKeyError\u001B[39m: ('anonymized_array_anonym_enhancement', \"'file_content'\")",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001B[31mKeyError\u001B[39m                                  Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[12]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m df[\u001B[43mdf\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43manonymized_array_anonym_enhancement\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mfile_content\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m]\u001B[49m]\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m/opt/anaconda3/envs/MLTD/lib/python3.11/site-packages/pandas/core/frame.py:4113\u001B[39m, in \u001B[36mDataFrame.__getitem__\u001B[39m\u001B[34m(self, key)\u001B[39m\n\u001B[32m   4111\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m.columns.nlevels > \u001B[32m1\u001B[39m:\n\u001B[32m   4112\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m._getitem_multilevel(key)\n\u001B[32m-> \u001B[39m\u001B[32m4113\u001B[39m indexer = \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43mcolumns\u001B[49m\u001B[43m.\u001B[49m\u001B[43mget_loc\u001B[49m\u001B[43m(\u001B[49m\u001B[43mkey\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m   4114\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m is_integer(indexer):\n\u001B[32m   4115\u001B[39m     indexer = [indexer]\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m/opt/anaconda3/envs/MLTD/lib/python3.11/site-packages/pandas/core/indexes/base.py:3819\u001B[39m, in \u001B[36mIndex.get_loc\u001B[39m\u001B[34m(self, key)\u001B[39m\n\u001B[32m   3814\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(casted_key, \u001B[38;5;28mslice\u001B[39m) \u001B[38;5;129;01mor\u001B[39;00m (\n\u001B[32m   3815\u001B[39m         \u001B[38;5;28misinstance\u001B[39m(casted_key, abc.Iterable)\n\u001B[32m   3816\u001B[39m         \u001B[38;5;129;01mand\u001B[39;00m \u001B[38;5;28many\u001B[39m(\u001B[38;5;28misinstance\u001B[39m(x, \u001B[38;5;28mslice\u001B[39m) \u001B[38;5;28;01mfor\u001B[39;00m x \u001B[38;5;129;01min\u001B[39;00m casted_key)\n\u001B[32m   3817\u001B[39m     ):\n\u001B[32m   3818\u001B[39m         \u001B[38;5;28;01mraise\u001B[39;00m InvalidIndexError(key)\n\u001B[32m-> \u001B[39m\u001B[32m3819\u001B[39m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m(key) \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01merr\u001B[39;00m\n\u001B[32m   3820\u001B[39m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mTypeError\u001B[39;00m:\n\u001B[32m   3821\u001B[39m     \u001B[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001B[39;00m\n\u001B[32m   3822\u001B[39m     \u001B[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001B[39;00m\n\u001B[32m   3823\u001B[39m     \u001B[38;5;66;03m#  the TypeError.\u001B[39;00m\n\u001B[32m   3824\u001B[39m     \u001B[38;5;28mself\u001B[39m._check_indexing_error(key)\n",
+      "\u001B[31mKeyError\u001B[39m: ('anonymized_array_anonym_enhancement', \"'file_content'\")"
+     ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 12
   },
   {
    "metadata": {
@@ -3598,7 +3516,7 @@
    "cell_type": "code",
    "source": [
     "# Step 2: Create the lemmatizer\n",
-    "lemmatizer = WordNetLemmatizer()\n"
+    "lemmatizer = WordNetLemmatizer()"
    ],
    "id": "db33a2ff29cca421",
    "outputs": [],
